<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="button_connect">Connect</string>
<string name="app_name">PController</string>
<string name="menu_exit">Exit</string>
<string name="text_recentlyUsedHosts">Recently Used Hosts:</string>
<string name="toast_invalidIP">Invalid IP Address</string>
<string name="text_pPwd">Password:</string>
<string name="toast_connection_success">Success</string>
<string name="toast_connection_failed">Failed</string>
<string name="toast_connection_establishing">Establishing</string>
<string name="menu_use_help">Help</string>
<string name="text_options">Options</string>
<string name="pref_move_sensitivity">Moving Sensitivity:</string>
<string name="pref_wheel_sensitivity">Scrolling Sensitivity:</string>
<string name="pref_hold_delay">Hold Delay(ms):</string>
<string name="pref_keep_screen_on">Keep Screen On:</string>
<string name="pref_sound_alert">Sound Feedback:</string>
<string name="pref_pref_vibration_alert">Vibration Feedback:</string>
<string name="pref_fullscreen_on">Full Screen:</string>
<string name="menu_play">Play</string>
<string name="menu_pause">Stop</string>
<string name="menu_erase">Erase Marks</string>
<string name="butsetting_btActionSelect">Select</string>
<string name="butsetting_btleft">Left:</string>
<string name="butsetting_btright">Right:</string>
<string name="butsetting_btup">Up:</string>
<string name="butsetting_btdown">Down:</string>
<string name="menu_conn_help">Connection Help</string>
<string name="text_specials">Special Keys</string>
<string name="text_numbers">Number Keys</string>
<string name="text_characters">Letter Keys</string>
<string name="text_arrows">Arrow Keys</string>
<string name="text_btActionSelect">Select</string>
<string name="text_btActionGroup">Type</string>
<string name="toast_noSensor">Sorry,Your device does not have a Gravity Sensor!</string>
<string name="menu_explore_roots">Root Directory</string>
<string name="menu_refresh">Refresh</string>
<string name="menu_fileexplorer">File Explorer</string>
<string name="menu_about">About</string>
<string name="menu_reset">Reset</string>
<string name="menu_touchpad">Touch Pad</string>
<string name="text_button_settings">Key Bindings</string>
<string name="text_sensor_settings">Sensor Settings</string>
<string name="ss_high_sensitivity">High Sensitivity:</string>
<string name="ss_angle_settings">Critical Angle Settings(°):</string>
<string name="ss_lr">Left and Right(&gt;):</string>
<string name="ss_up">Up(&lt;):</string>
<string name="ss_down">Down(&gt;):</string>
<string name="ss_tutorial">When you tilt the phone more or less than the set value, the direction command will be sent.\n(The up and down angle is positive when the phone faces you)</string>
<string name="text_ip_hint">IP Address</string>
<string name="text_pwd_hint">Password</string>
<string name="menu_white">White</string>
<string name="menu_black">Black</string>
<string name="pref_screen_capture">Screen Capture:</string>
<string name="text_system_options">System Options</string>
<string name="text_exit_confirm">Exit Application?</string>
<string name="text_yes">Yes</string>
<string name="text_no">No</string>
<string name="text_reconnect_confirm">Back to Connect ？</string>
<string name="text_op_confirm">Confirm Operation</string>
<string name="menu_togglekeyboard">Keyboard</string>
<string name="pref_shake_switch">Shake to Change Slides:</string>
</resources>
