<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:focusableInTouchMode="true" android:orientation="vertical"
	android:background="@drawable/options">

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/text_system_options"
		android:textColor="@color/navy" android:textSize="22dp"
		android:textStyle="bold" android:gravity="center_horizontal"
		android:padding="2dp" />

	<View android:layout_width="fill_parent" android:background="@color/navy"
		android:layout_height="2dp" android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp" android:layout_marginBottom="8dp" />

	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:layout_height="wrap_content"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:padding="5dp" android:layout_marginTop="8dp">

			<LinearLayout android:layout_height="wrap_content"
				android:layout_marginTop="5dp" android:layout_width="fill_parent"
				android:orientation="horizontal">

				<TextView android:layout_weight="1" android:layout_width="wrap_content"
					android:layout_gravity="left|center_vertical"
					android:layout_height="wrap_content" android:textSize="18dp"
					android:text="@string/pref_sound_alert" android:textColor="@color/black" />

				<CheckBox android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/pref_sound_alert"
					android:focusable="true" android:layout_gravity="right|center_vertical" />
			</LinearLayout>


			<LinearLayout android:layout_height="wrap_content"
				android:layout_marginTop="5dp" android:layout_width="fill_parent"
				android:orientation="horizontal">

				<TextView android:layout_weight="1" android:layout_gravity="left|center_vertical"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="18dp" android:text="@string/pref_pref_vibration_alert"
					android:textColor="@color/black" />

				<CheckBox android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/pref_vibration_alert"
					android:focusable="true" android:layout_gravity="right|center_vertical" />
			</LinearLayout>

			<LinearLayout android:layout_height="wrap_content"
				android:layout_marginTop="5dp" android:layout_width="fill_parent"
				android:orientation="horizontal">

				<TextView android:layout_weight="1" android:layout_gravity="left|center_vertical"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="18dp" android:text="@string/pref_fullscreen_on"
					android:textColor="@color/black" />

				<CheckBox android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/pref_fullscreen_on"
					android:focusable="true" android:layout_gravity="right|center_vertical" />
			</LinearLayout>

			<LinearLayout android:layout_height="wrap_content"
				android:layout_marginTop="5dp" android:layout_width="fill_parent"
				android:orientation="horizontal">

				<TextView android:layout_weight="1" android:layout_gravity="left|center_vertical"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="18dp" android:text="@string/pref_keep_screen_on"
					android:textColor="@color/black" />

				<CheckBox android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/pref_keep_screen_on"
					android:focusable="true" android:layout_gravity="right|center_vertical" />
			</LinearLayout>

		</LinearLayout>
	</ScrollView>
</LinearLayout>
